# ZoraPipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_zora.py
.github/workflows/: build-image.yml  ci.yml  harvest-full.yml  harvest-incremental.yml  zora-build-image.yml  zora-harvest.yml
data/: publications.jsonl  publications_sample.jsonl  researchers.jsonl  state.json  zora_publications.jsonl
data/samples/: ZORA_README.md  publications.jsonl
docs/: zora-harvester.md
schema/: researcher.schema.json  zora_publication.schema.json
scripts/: ingest_to_mongodb.py  inspect_fields.py  zora_inspect_fields.py
src/: aggregate.py  config.py  harvest.py  normalize.py  output_schema.py  schema.py  state.py  zora_client.py
src/thesis_matchmaker/: __init__.py
src/thesis_matchmaker/zora/: __init__.py  harvest.py  normalize.py  scheduler.py  state.py
src/thesis_matchmaker/zora/schema/: zora_publication.schema.json
tests/: fake_dso.py  test_aggregate.py  test_normalize.py  test_output_schema.py
tests/zora/: __init__.py  fake_dso.py  test_normalize.py  test_output_schema.py  test_scheduler.py
