# NOTE: When copying to RAG-Thesis-Matchmaker, merge these dependencies
# into the existing pyproject.toml rather than replacing it. The target
# repo has its own deps (chromadb, httpx, etc.) that must be preserved.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-matchmaker"
version = "0.0.1"
description = "Thesis matchmaking assistant for UZH: recommends supervisors and open thesis positions from a student's research interests."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Shayan Sooratgar" },
    { name = "Nicolas Peyer" },
    { name = "Gregory Frommelt" },
    { name = "Ilya Kruchenetskiy" },
]
dependencies = [
    "dspace-rest-client>=0.1.20",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
